# plankton

./: .gitignore  README.md  zooplankton_wet_weight_derived_updated.diff.csv  zooplankton_wet_weight_derived_updated.xlsx  zooplankton_wet_weight_recommended_v5_aliases_from_table1_I.xlsx  浮游动物开发指南.docx  表1.xlsx  表2.xlsx  赣江浮游丰水期详细数据.xlsx  锦江上栗丰水期详细数据.xlsx
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: taxonomies.json  wetweights.json
android/app/src/main/assets/docs/: 原生安卓项目书.enc  当前程序情况.enc  新窗口提示词.enc  语音助手项目书.enc  项目书.enc
android/app/src/main/assets/templates/: table1.xlsx  (+1 more)
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/scripts/: dev-export.ts  generate-wetweights.cjs
app/src/: App.tsx  index.css
app/src/app/: AppShell.tsx  utils.ts
app/src/app/components/: DialogFrame.tsx  NavTabs.tsx  SpeciesLibrary.tsx  TopBar.tsx
app/src/app/contexts/: WetWeightsContext.tsx
app/src/app/dialogs/: SettingsDialog.tsx  TaxonomyDialog.tsx  WetWeightDialog.tsx  WetWeightLibraryDialog.tsx
app/src/app/hooks/: useIsMobile.ts
app/src/app/views/: PointsView.tsx  PointsViewDesktop.tsx  PointsViewMobile.tsx  PreviewView.tsx  SpeciesView.tsx  SpeciesViewDesktop.tsx  SpeciesViewMobile.tsx
app/src/data/: wetweights.json
app/src/lib/: calc.ts  constants.ts  dataset.ts  exportExcel.ts  format.ts  id.ts  storage.ts  types.ts  wetweights.ts
docs/: UI_Style_Template.md  原生安卓项目书.md  当前程序情况.md  新窗口提示词.md  语音助手项目书.md  项目书.md  首次初始化资源.md
tools/: DocEncryptor.java  bump_release.ps1  generate_builtin_db.py  update_docs_and_encrypt.ps1  verify_docs_sync.ps1
voice_assistant/: .gitignore  settings.gradle.kts
voice_assistant/app/: build.gradle.kts
voice_assistant/app/src/main/: AndroidManifest.xml
voice_assistant/app/src/main/cpp/: CMakeLists.txt  host-toolchain-llvm-mingw.cmake  native-lib.cpp
voice_assistant/bridge/: build.gradle.kts
任务清单（持续更新，永远只做最新的那一批要求）/: 1.txt  2.txt
数据库/: 浮游动物分类.xlsx  评价湿重.xlsx
表格1错误示例/: 表1 (4).xlsx  表2 (3).xlsx
(+170 files in other folders)
